--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/welcomePage.css">
 </head>
 <body>
-    
+    <main></main>
+    <script src="javaScript/loginRegister.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
