--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main></main>
+    <script src="javaScript/login.js"></script>
     <script src="javaScript/loginRegister.js"></script>
     <script src="index.js"></script>
 </body>
