--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="javaScript/login.js"></script>
     <script src="javaScript/loginRegister.js"></script>
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/67deff829e.js" crossorigin="anonymous"></script>
 </body>
 </html>
