--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/welcomePage.css">
+    <link rel="stylesheet" href="CSS/login.css">
 </head>
 <body>
     <main></main>
