--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/welcomePage.css">
+    <link rel="stylesheet" href="CSS/register.css">
 </head>
 <body>
     <main></main>
+    <script src="javaScript/register.js"></script>
     <script src="javaScript/loginRegister.js"></script>
     <script src="index.js"></script>
 </body>
