--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main></main>
+    <script src="javaScript/home.js"></script>
     <script src="javaScript/login.js"></script>
     <script src="javaScript/loginRegister.js"></script>
     <script src="index.js"></script>
