--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/welcomePage.css">
+    <link rel="stylesheet" href="CSS/welcome.css">
     <link rel="stylesheet" href="CSS/login.css">
     <link rel="stylesheet" href="CSS/register.css">
 </head>
@@ -14,7 +14,7 @@
     <script src="javaScript/home.js"></script>
     <script src="javaScript/login.js"></script>
     <script src="javaScript/register.js"></script>
-    <script src="javaScript/loginRegister.js"></script>
+    <script src="javaScript/welcome.js"></script>
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/67deff829e.js" crossorigin="anonymous"></script>
 </body>
