Added logout button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/welcome.css">
     <link rel="stylesheet" href="CSS/login.css">
     <link rel="stylesheet" href="CSS/register.css">
+    <link rel="stylesheet" href="CSS/home.css">
 </head>
 <body>
     <main></main>
