Added stickyNav.js to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <main></main>
     <script src="javaScript/home.js"></script>
+    <script src="javaScript/stickNav.js"></script>
     <script src="javaScript/login.js"></script>
     <script src="javaScript/register.js"></script>
     <script src="javaScript/welcome.js"></script>
