--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <main></main>
+    <script src="javaScript/profile.js"></script>
     <script src="javaScript/home.js"></script>
     <script src="javaScript/login.js"></script>
     <script src="javaScript/register.js"></script>
