--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="javaScript/login.js"></script>
     <script src="javaScript/register.js"></script>
     <script src="javaScript/welcome.js"></script>
+    <script src="javaScript/helper.js"></script>
     <script src="database/data.js"></script>
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/67deff829e.js" crossorigin="anonymous"></script>
