--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="CSS/stickyNav.css">
     <link rel="stylesheet" href="CSS/profile.css">
+    <link rel="stylesheet" href="CSS/myTeams.css">
 </head>
 <body>
     <main></main>
+    <script src="javaScript/myTeams.js"></script>
     <script src="javaScript/profile.js"></script>
     <script src="javaScript/home.js"></script>
     <script src="javaScript/stickNav.js"></script>
