--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/welcomePage.css">
     <link rel="stylesheet" href="CSS/login.css">
+    <link rel="stylesheet" href="CSS/awardInfoPage.css">
 </head>
 <body>
     <main></main>
     <script src="javaScript/login.js"></script>
     <script src="javaScript/loginRegister.js"></script>
+    <script src="javaScript/awardInfoPage.js"></script>
+    <script src="database/data.js"></script>
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/67deff829e.js" crossorigin="anonymous"></script>
 </body>
