Rendered team pages to different groups

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="CSS/stickyNav.css">
     <link rel="stylesheet" href="CSS/profile.css">
     <link rel="stylesheet" href="CSS/myTeams.css">
+    <link rel="stylesheet" href="CSS/team.css">
 </head>
 <body>
     <main></main>
+    <script src="javaScript/team.js"></script>
     <script src="javaScript/myTeams.js"></script>
     <script src="javaScript/profile.js"></script>
     <script src="javaScript/home.js"></script>
