Rendered awards page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="CSS/profile.css">
     <link rel="stylesheet" href="CSS/myTeams.css">
     <link rel="stylesheet" href="CSS/team.css">
+    <link rel="stylesheet" href="CSS/awards.css">
 </head>
 <body>
     <main></main>
+    <script src="javaScript/awards.js"></script>
     <script src="javaScript/team.js"></script>
     <script src="javaScript/myTeams.js"></script>
     <script src="javaScript/profile.js"></script>
