--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 <body>
     <main></main>
+    <div class="popup">
+        <div class="popupContent">
+            <div class="exitPopup">X</div>
+            <div class="inputContent"></div>
+        </div>
+    </div>
     <script src="javaScript/team.js"></script>
     <script src="javaScript/myTeams.js"></script>
     <script src="javaScript/profile.js"></script>
