--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <link rel="stylesheet" href="CSS/register.css">
     <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="CSS/stickyNav.css">
+    <link rel="stylesheet" href="CSS/myGroups.css">
+    <link rel="stylesheet" href="CSS/group.css">
+    <link rel="stylesheet" href="CSS/awards.css">
     <link rel="stylesheet" href="CSS/profile.css">
 </head>
 <body>
     <main></main>
     <script src="javaScript/profile.js"></script>
+    <script src="javaScript/awards.js"></script>
+    <script src="javaScript/group.js"></script>
+    <script src="javaScript/myGroups.js"></script>
     <script src="javaScript/home.js"></script>
     <script src="javaScript/stickNav.js"></script>
     <script src="javaScript/login.js"></script>
