Added content for createNewGroup page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="javaScript/profile.js"></script>
     <script src="javaScript/awards.js"></script>
     <script src="javaScript/group.js"></script>
+    <script src="javaScript/createNewGroup.js"></script>
     <script src="javaScript/myGroups.js"></script>
     <script src="javaScript/home.js"></script>
     <script src="javaScript/stickNav.js"></script>
