Created droplist for filtered usernames with css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="CSS/stickyNav.css">
     <link rel="stylesheet" href="CSS/myGroups.css">
     <link rel="stylesheet" href="CSS/group.css">
+    <link rel="stylesheet" href="CSS/createNewGroup.css">
     <link rel="stylesheet" href="CSS/awards.css">
     <link rel="stylesheet" href="CSS/profile.css">
 </head>
