Added pop up when leave group button is clicked

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
     <div class="popup">
         <div class="popupContent">
+            <i class="fa-solid fa-xmark popup-cross"></i>
             <div class="inputContent"></div>
         </div>
     </div>
