Betting choices are now saved in the JSON array

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
 
     <main></main>
+    <script src="javaScript//awardInfoPage.js"></script>
     <script src="javaScript/profile.js"></script>
     <script src="javaScript/awards.js"></script>
     <script src="javaScript/group.js"></script>
