--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GoldenBet</title>
     <script src="https://kit.fontawesome.com/67deff829e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/welcome.css">
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="CSS/awards.css">
     <link rel="stylesheet" href="CSS/profile.css">
 </head>
+
 <body>
     <div class="popup">
         <div class="popupContent">
@@ -41,4 +43,5 @@
     <script src="database/data.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
